--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,113 +1,3 @@
-.body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.container {
-  width: 644px;
-  height: 523px;
-  border: 1px solid #bfbfbf;
-  border-radius: 6px;
-  margin-top: 20vh;
-}
-
-#logo {
-  width: 66px;
-  height: 65px;
-  float: left;
-}
-.brand-name {
-  font-size: 17.5px;
-}
-
-.brand-subtitle {
-  font-size: 12px;
-}
-
-h2 {
-  font-size: 30px;
-  font-weight: 600;
-}
-
-.form-group {
-  .btn {
-    font-size: 14px;
-    width: 162px;
-    height: 40px;
-    border-radius: 6px;
-  }
-  label {
-    font-size: 14px;
-    margin-bottom: 2px;
-  }
-}
-
-.form-control {
-  width: 250px;
-  height: 35px;
-}
-
-//sidebar
-.navbar.fixed-left {
-  height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1030;
-  background-color: #353535;
-  color: white;
-  padding: 0px;
-  .nav-brand {
-    padding: 0.5rem 1rem;
-    #logoSidebar {
-      width: 53px;
-      height: 50px;
-    }
-  }
-}
-
-#navbarContent {
-  padding-top: 1rem;
-  .nav-link {
-    display: flex;
-    flex-direction: row;
-    svg {
-      margin-right: 1rem;
-    }
-    .icon-color-fill {
-      fill: #bfbfbf;
-    }
-    .icon-color-stroke {
-      stroke: #bfbfbf;
-    }
-  }
-  .nav-item {
-    width: 100%;
-    text-decoration: none;
-    display: block;
-    font-weight: 400;
-  }
-  .nav-link {
-    padding: 1rem 1.5rem;
-  }
-  a:hover {
-    background-color: #3e3e3e;
-    cursor: pointer;
-    font-weight: 600;
-    .icon-color-fill {
-      fill: white;
-    }
-    .icon-color-stroke {
-      stroke: white;
-    }
-  }
-}
-
-@media (min-width: 768px) {
-  .navbar.fixed-left {
-    bottom: 0;
-    width: 232px;
-    flex-flow: column nowrap;
-    align-items: flex-start;
-  }
-}
+@import 'login.scss';
+@import 'sidebar.scss';
+@import 'customNavbar.scss';
