Dashboard finished | Fixed Navbar

--- a/app/scss/customNavbar.scss
+++ b/app/scss/customNavbar.scss
@@ -3,6 +3,9 @@
   border-bottom: 1px solid #c4c4c4;
   padding-left: 0px;
   padding-right: 0px;
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
 #navbarSymbols {
   margin-left: auto;
