--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,41 +1,3 @@
-.body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-
-.container {
-  width: 644px;
-  height: 523px;
-  border: 1px solid #bfbfbf;
-  border-radius: 6px;
-  margin-top: 20vh; }
-
-#logo {
-  width: 66px;
-  height: 65px;
-  float: left; }
-
-.brand-name {
-  font-size: 17.5px; }
-
-.brand-subtitle {
-  font-size: 12px; }
-
-h2 {
-  font-size: 30px;
-  font-weight: 600; }
-
-.form-group .btn {
-  font-size: 14px;
-  width: 162px;
-  height: 40px;
-  border-radius: 6px; }
-.form-group label {
-  font-size: 14px;
-  margin-bottom: 2px; }
-
-.form-control {
-  width: 250px;
-  height: 35px; }
-
 .navbar.fixed-left {
   height: 100%;
   position: fixed;
@@ -91,7 +53,10 @@ h2 {
   background-color: #f5f5f5;
   border-bottom: 1px solid #c4c4c4;
   padding-left: 0px;
-  padding-right: 0px; }
+  padding-right: 0px;
+  position: fixed;
+  top: 0;
+  width: 100%; }
 
 #navbarSymbols {
   margin-left: auto; }
@@ -106,3 +71,112 @@ h2 {
       margin-top: 4px; }
   #navbarSymbols a:hover {
     cursor: pointer; }
+
+body {
+  background-color: #fafafa; }
+
+.content-container {
+  padding: 28px 35px;
+  margin-left: 232px;
+  display: flex;
+  flex-direction: column; }
+  .content-container h3 {
+    font-size: 18px;
+    font-weight: 400;
+    padding-top: 15px;
+    padding-left: 15px; }
+  .content-container .inner-container {
+    display: flex;
+    width: 100%; }
+    .content-container .inner-container .sales-container {
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+      border: 1px solid #bfbfbf;
+      border-radius: 6px;
+      width: 723px;
+      height: 770px;
+      margin-right: 85px; }
+      .content-container .inner-container .sales-container .chart-container {
+        display: flex;
+        flex-direction: row;
+        margin-top: auto; }
+        .content-container .inner-container .sales-container .chart-container .chart {
+          border: 1px solid black;
+          width: 405px;
+          height: 272px;
+          margin-top: auto;
+          margin-left: 24px;
+          margin-bottom: 42px; }
+        .content-container .inner-container .sales-container .chart-container .info-container {
+          margin-top: auto;
+          margin-left: 59px;
+          margin-bottom: 58px; }
+          .content-container .inner-container .sales-container .chart-container .info-container .month {
+            color: #585858;
+            font-size: 16px;
+            font-weight: 400; }
+          .content-container .inner-container .sales-container .chart-container .info-container .sum {
+            color: #585858;
+            font-size: 30px;
+            font-weight: 600; }
+    .content-container .inner-container .sold-container {
+      display: flex;
+      flex-direction: column;
+      background-color: #fff;
+      border: 1px solid #bfbfbf;
+      border-radius: 6px;
+      width: 810px;
+      height: 415px; }
+      .content-container .inner-container .sold-container .sort-container {
+        display: flex;
+        margin-left: auto;
+        align-items: center; }
+        .content-container .inner-container .sold-container .sort-container h4 {
+          margin: 18px 15px;
+          font-size: 14px;
+          font-weight: 400; }
+          .content-container .inner-container .sold-container .sort-container h4.active {
+            font-weight: 600; }
+          .content-container .inner-container .sold-container .sort-container h4:hover {
+            cursor: pointer;
+            opacity: 75%; }
+      .content-container .inner-container .sold-container .btn-container {
+        margin-top: auto; }
+        .content-container .inner-container .sold-container .btn-container button {
+          margin-left: 15px;
+          margin-bottom: 15px;
+          width: 40px;
+          height: 40px;
+          border: 1px solid #bfbfbf;
+          border-radius: 6px; }
+          .content-container .inner-container .sold-container .btn-container button.active {
+            color: white;
+            background-color: #353535; }
+          .content-container .inner-container .sold-container .btn-container button:hover {
+            cursor: pointer;
+            background-color: #585858;
+            color: #fff; }
+    .content-container .inner-container ol {
+      margin-left: 1rem; }
+      .content-container .inner-container ol li {
+        display: flex;
+        color: #585858;
+        margin-top: 20px; }
+        .content-container .inner-container ol li.active {
+          color: #353535; }
+          .content-container .inner-container ol li.active .name {
+            font-weight: 600; }
+        .content-container .inner-container ol li .price {
+          width: 130px;
+          text-align: right;
+          margin-right: 60px;
+          font-size: 25px;
+          font-weight: 600; }
+        .content-container .inner-container ol li .name {
+          font-size: 16px;
+          display: flex;
+          align-self: center; }
+          .content-container .inner-container ol li .name:hover {
+            cursor: pointer;
+            opacity: 75%; }
