--- a/app/scss/sidebar.scss
+++ b/app/scss/sidebar.scss
@@ -44,7 +44,8 @@
   a {
     color: inherit;
   }
-  a:hover {
+  a:hover,
+  a.active {
     background-color: #3e3e3e;
     cursor: pointer;
     font-weight: 600;
