--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,12 +85,17 @@ body {
   margin-top: 70px;
   display: flex;
   flex-direction: column; }
+  .content-container h2 {
+    font-size: 30px;
+    font-weight: 600;
+    margin-bottom: 0px; }
   .content-container h3 {
     font-size: 18px;
     font-weight: 400;
     padding-top: 15px;
     padding-left: 15px; }
   .content-container .inner-container {
+    margin-top: 38px;
     display: flex;
     width: 100%; }
     .content-container .inner-container .sales-container {
@@ -185,3 +190,48 @@ body {
           .content-container .inner-container ol li .name:hover {
             cursor: pointer;
             opacity: 75%; }
+
+.content-container .header-container {
+  display: flex; }
+  .content-container .header-container .btn-container {
+    margin-left: auto; }
+    .content-container .header-container .btn-container button {
+      width: 135px;
+      height: 40px; }
+.content-container .filter-container {
+  margin-top: 13px;
+  display: flex;
+  flex-direction: row; }
+  .content-container .filter-container #scope {
+    align-self: center;
+    width: 14px;
+    height: 14px; }
+  .content-container .filter-container input {
+    margin-left: 8px;
+    background: none;
+    border: none; }
+    .content-container .filter-container input:focus {
+      outline: none; }
+.content-container .table-container .table thead {
+  color: #bfbfbf;
+  font-size: 16px;
+  font-weight: 600px; }
+.content-container .table-container .table tbody tr:hover {
+  background-color: #f5f5f5; }
+.content-container .table-container .table tbody .name {
+  display: flex; }
+  .content-container .table-container .table tbody .name img {
+    align-self: center;
+    width: 59px;
+    height: 34px; }
+  .content-container .table-container .table tbody .name .info {
+    margin-left: 37px; }
+    .content-container .table-container .table tbody .name .info .heading {
+      color: #1a1a1a;
+      font-size: 14px; }
+    .content-container .table-container .table tbody .name .info .category {
+      color: #909090;
+      font-size: 12px; }
+.content-container .table-container .table tbody .value {
+  font-size: 14px;
+  color: #1a1a1a; }
