--- a/app/scss/menu.scss
+++ b/app/scss/menu.scss
@@ -28,7 +28,13 @@
     }
   }
   .table-container {
+    margin-top: 30px;
     .table {
+      td,
+      th {
+        border-bottom: 1px solid #c4c4c4;
+        border-top: none;
+      }
       thead {
         color: #bfbfbf;
         font-size: 16px;
@@ -38,6 +44,9 @@
       tbody {
         tr:hover {
           background-color: #f5f5f5;
+          svg {
+            visibility: visible;
+          }
         }
         .name {
           display: flex;
@@ -58,11 +67,32 @@
             }
           }
         }
-
         .value {
+          vertical-align: middle;
           font-size: 14px;
           color: #1a1a1a;
-          //numbers müssen noch gecentered werden
+        }
+        .dots {
+          vertical-align: middle;
+          svg {
+            visibility: hidden;
+          }
+          .dropdown-menu {
+            background-color: #353535;
+            padding-top: 0px;
+            padding-bottom: 0px;
+            margin-top: 0px;
+            left: 50px !important;
+            .dropdown-item {
+              padding-top: 8px;
+              padding-bottom: 8px;
+              font-size: 14px;
+              color: #fff;
+              &:hover {
+                color: #1a1a1a;
+              }
+            }
+          }
         }
       }
     }
