mealinfo setup | linked melainfo with (buttons)-> changed to links

--- a/app/scss/menu.scss
+++ b/app/scss/menu.scss
@@ -3,7 +3,7 @@
     display: flex;
     .btn-container {
       margin-left: auto;
-      button {
+      .btn {
         width: 135px;
         height: 40px;
       }
