mealinfo -> show.php finished

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,4 +1,5 @@
 @import 'sidebar.scss';
 @import 'customNavbar.scss';
 @import 'dashboard.scss';
-@import 'menu.scss';
+@import 'index.scss';
+@import 'show.scss';
