--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1030;
+  z-index: 999;
   background-color: #353535;
   color: white;
   padding: 0px; }
@@ -60,7 +60,8 @@
   position: fixed;
   top: 0;
   width: 100%;
-  height: 70px; }
+  height: 70px;
+  z-index: 998; }
 
 #navbarSymbols {
   margin-left: auto; }
@@ -261,3 +262,47 @@ body {
         color: #fff; }
         .content-container .table-container .table tbody .dots .dropdown-menu .dropdown-item:hover {
           color: #1a1a1a; }
+
+.header-container img {
+  width: 60px;
+  height: 35px;
+  margin-right: 26px; }
+
+.subheading {
+  margin-left: -35px;
+  margin-right: -35px; }
+  .subheading .heading {
+    margin-left: 35px;
+    width: fit-content;
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 25px;
+    padding-bottom: 22px;
+    border-bottom: 2px solid #1a1a1a; }
+  .subheading .title-border {
+    border-bottom: 1px solid #c4c4c4; }
+
+form {
+  max-width: 550px; }
+  form .picture-container {
+    display: flex;
+    margin-top: 44px;
+    align-items: center; }
+    form .picture-container img {
+      width: 50px;
+      height: 30px;
+      margin-right: 20px; }
+    form .picture-container label {
+      margin-left: 6px; }
+  form .row {
+    margin-bottom: 22px; }
+    form .row .form-group {
+      margin-right: 53px;
+      margin-bottom: 0px;
+      padding-right: 0px; }
+    form .row label {
+      font-size: 14px;
+      font-weight: 400;
+      color: #909090; }
+    form .row textarea {
+      resize: none; }
