--- a/public/css/style.css
+++ b/public/css/style.css
@@ -325,10 +325,20 @@ form {
         color: #585858; }
       .wrapper .opening-hours .weekday .time {
         margin-right: 50px; }
-        .wrapper .opening-hours .weekday .time i {
-          font-size: 5px; }
+        .wrapper .opening-hours .weekday .time .input-group .input-group-append .fa-clock {
+          color: #495057;
+          background-color: #e9ecef;
+          border: 1px solid #ced4da;
+          border-radius: 0.25rem;
+          border-top-left-radius: 0;
+          border-bottom-left-radius: 0;
+          width: 42px;
+          height: 38px;
+          padding: 10px 10px; }
   .wrapper .acc {
     margin-top: 30px; }
   .wrapper .user-settings {
     margin-top: 16px;
-    max-width: 700px; }
+    max-width: none; }
+    .wrapper .user-settings .form-group {
+      max-width: 250px; }
