Modal newOrder finished

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,4 +4,5 @@
 @import 'menus/index.scss';
 @import 'menus/show.scss';
 @import 'orders/index.scss';
+@import 'orders/newOrderModal.scss';
 @import 'settings/index.scss';
