--- a/app/scss/orders/newOrderModal.scss
+++ b/app/scss/orders/newOrderModal.scss
@@ -1,7 +1,7 @@
-.modal-dialog {
+.new-order-dialog {
   max-height: 900px;
   max-width: 1080px;
-  .modal-content {
+  .new-order-content {
     background-color: #fafafa;
     .modal-header {
       border-bottom: 1px solid #c4c4c4;
