--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -5,4 +5,5 @@
 @import 'menus/show.scss';
 @import 'orders/index.scss';
 @import 'orders/newOrderModal.scss';
+@import 'orders/acceptOrderModal.scss';
 @import 'settings/index.scss';
