Login logik works | Session get started | session does not unset -> Logout next

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,6 +3,7 @@
   background-color: #fff; }
 
 .container {
+  background-color: #fafafa;
   width: 644px;
   height: 523px;
   border: 1px solid #bfbfbf;
