--- a/app/scss/menus/show.scss
+++ b/app/scss/menus/show.scss
@@ -42,6 +42,14 @@ form {
       margin-right: 53px;
       margin-bottom: 0px;
       padding-right: 0px;
+      input::-webkit-outer-spin-button,
+      input::-webkit-inner-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+      }
+      input[type='number'] {
+        -moz-appearance: textfield; /* Firefox */
+      }
     }
     label {
       font-size: 14px;
