settings set password get hashed | openingHours set works | menu/edit works, but no err messages(must be set in Session) | menu delete works, delete image and dir on server too

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,7 +2,7 @@
 @import 'inc/customNavbar.scss';
 @import 'dashboards/index.scss';
 @import 'menus/index.scss';
-@import 'menus/show.scss';
+@import 'menus/edit.scss';
 @import 'orders/index.scss';
 @import 'orders/newOrderModal.scss';
 @import 'orders/acceptOrderModal.scss';
