--- a/app/scss/dashboards/index.scss
+++ b/app/scss/dashboards/index.scss
@@ -40,9 +40,8 @@ body {
         flex-direction: row;
         margin-top: auto;
         .chart {
-          border: 1px solid black;
-          width: 405px;
-          height: 272px;
+          max-width: 400px;
+          max-height: 275px;
           margin-top: auto;
           margin-left: 24px;
           margin-bottom: 42px;
